Update link download cv

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <a href="https://plus.google.com/u/0/+KhriZtiaNMoreno/" target="_blank"><i class="fa fa-google-plus-square"></i></a>
             </div>
             <div class="hero-btn">
-    					<a class="btn btn-default rex-primary-btn-effect" href="#" role="button">Download CV</a>
+    					<a target="_blank" class="btn btn-default rex-primary-btn-effect" href="https://1drv.ms/b/s!AiuX803moV_ZhJpvVpuBvEVoFGVo-g" role="button">Download CV</a>
     				</div>
           </div>
         </div>
