--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="media-link">
               <a href="https://twitter.com/khriztianmoreno" target="_blank"><i class="fa fa-twitter-square"></i></a>
               <a href="https://github.com/khriztianmoreno" target="_blank"><i class="fa fa-github-square"></i></a>
-              <a href="http://www.linkedin.com/pub/cristian-moreno/16/bb6/38" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+              <a href="https://www.linkedin.com/in/khriztianmoreno/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
               <a href="https://www.facebook.com/khriztianmoreno" target="_blank"><i class="fa fa-facebook-square"></i></a>
               <a href="http://instagram.com/khriztianmoreno" target="_blank"><i class="fa fa-instagram"></i></a>
               <a href="https://plus.google.com/u/0/+KhriZtiaNMoreno/" target="_blank"><i class="fa fa-google-plus-square"></i></a>
