--- a/index.html
+++ b/index.html
@@ -720,6 +720,15 @@
         </div>
       </div>
     </section>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-30949520-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-30949520-1');
+    </script>
     <script src="js/bundle.min.js"></script>
   </body>
 </html>
